--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,36 @@
 html {
-  font-family: "Arial", sans-serif;
+  font-family: "Calibri", sans-serif;
+}
+
+body {
+  background-color: #DFDFDF;
+}
+
+h1, h2, h3 {
+  margin: 0; padding: 0; border: 0;
+
+}
+
+h1 {
+  margin-bottom: 10px;
+}
+h2 {
+  margin-bottom: 10px;
+}
+h3 {
+  margin-bottom: 8px;
+}
+
+p {
+  margin: 0; padding: 0; border: 0;
+  font-size: 11pt;
+}
+
+.section {
+    width: 500px;
+    margin-bottom: 20px;
+}
+
+.subsection {
+  margin-left: 2em;
 }
