--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -205,7 +205,7 @@ a {
   height: 2px;
   padding: 0;
   margin: 1rem 0;
-  background-color: #eff0f1;
+  background-color: #dfdfdf;
   border: 0; }
 
 @media screen and (min-width: 64em) {
