--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -267,3 +267,57 @@ ul {
   padding-left: 2px;
   padding-right: 2px;
 }
+
+/* Button classes */
+.limeButton {
+	-moz-box-shadow:inset 0px 1px 0px 0px #3dc21b;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #3dc21b;
+	box-shadow:inset 0px 1px 0px 0px #3dc21b;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #44c767), color-stop(1, #56b324));
+	background:-moz-linear-gradient(top, #44c767 5%, #56b324 100%);
+	background:-webkit-linear-gradient(top, #44c767 5%, #56b324 100%);
+	background:-o-linear-gradient(top, #44c767 5%, #56b324 100%);
+	background:-ms-linear-gradient(top, #44c767 5%, #56b324 100%);
+	background:linear-gradient(to bottom, #44c767 5%, #56b324 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#44c767', endColorstr='#56b324',GradientType=0);
+	background-color:#44c767;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	border-radius:3px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:13px;
+	padding:6px 24px 6px 24px;
+    text-align: center;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+    text-decoration: none;
+    cursor: pointer;
+    cursor: hand;
+}
+.limeButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #56b324), color-stop(1, #44c767));
+	background:-moz-linear-gradient(top, #56b324 5%, #44c767 100%);
+	background:-webkit-linear-gradient(top, #56b324 5%, #44c767 100%);
+	background:-o-linear-gradient(top, #56b324 5%, #44c767 100%);
+	background:-ms-linear-gradient(top, #56b324 5%, #44c767 100%);
+	background:linear-gradient(to bottom, #56b324 5%, #44c767 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#56b324', endColorstr='#44c767',GradientType=0);
+	background-color:#56b324;
+    cursor: pointer;
+    cursor: hand;
+}
+.limeButton:active {
+	position:relative;
+	top:1px;
+    cursor: pointer;
+    cursor: hand;
+}
+.limeButton:link {
+    text-decoration: none;
+    cursor: pointer;
+    cursor: hand;
+}
