--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,5 +1,10 @@
 * {
   box-sizing: border-box; }
+  
+h4 {
+    margin: 0;
+    padding: 0;   
+}
 
 body {
   padding: 0;
@@ -110,16 +115,16 @@ a {
     font-size: 1rem; } }
 
 .main-content :first-child {
-  margin-top: 0; }
+  margin-top: 16px; }
 .main-content img {
   max-width: 100%; }
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
-  margin-top: 2rem;
-  margin-bottom: 1rem;
+  margin-top: 20px;
+  margin-bottom: 4px;
   font-weight: normal;
   color: #159957; }
 .main-content p {
-  margin-bottom: 1em; }
+  margin-bottom: 6px; }
 .main-content code {
   padding: 2px 4px;
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
@@ -154,7 +159,7 @@ a {
 .main-content .highlight pre, .main-content pre {
   padding: 0.8rem;
   overflow: auto;
-  font-size: 0.9rem;
+  font-size: 8pt;
   line-height: 1.45;
   border-radius: 0.3rem; }
 .main-content pre code, .main-content pre tt {
@@ -250,11 +255,16 @@ a {
     font-size: 0.9rem; } }
 
 .subsection {
-  margin-left: 2em;
+    margin-left: 2em;
+}
+
+.main-content p {
+    margin-top: 0;   
 }
 
 .subsection p {
-  font-size: 12pt;
+    font-size: 12pt;
+    margin-top: 0;
 }
 
 ul {
@@ -335,4 +345,10 @@ ul {
 
 .subsection > a:link {
     text-decoration: none;
+}
+
+.subsection .writingDescription {
+    font-size: 12pt;
+    position: relative;
+    left: 4px;
 }
