--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,6 +16,10 @@ body {
     color: #606c71;
 }
 
+div {
+  text-align: justify;
+}
+
 a {
     color: #1e6bb8;
     text-decoration: none;
@@ -298,7 +302,7 @@ a:hover {
 
 @media screen and (min-width: 64em) {
     .main-content {
-        max-width: 80rem;
+        max-width: 64rem;
         padding: 2rem 6rem;
         margin: 0 auto;
         font-size: 1.1rem;
@@ -367,6 +371,11 @@ a:hover {
 
 ul {
     list-style-type: square;
+}
+
+.project-icons {
+  position: relative;
+  text-align: center;
 }
 
 .project-icons img {
