--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -492,3 +492,29 @@ ul {
 .roundImage {
     border-radius: 3px;
 }
+
+.projectButton {
+    border: 2px solid #999999;
+    border-radius: 3px;
+    text-decoration: none !important;
+    color: #999999;
+    padding: 4px 10px;
+    text-transform: uppercase;
+    font-weight: bold;
+    transition: all 0.1s linear;
+   -webkit-transition: all 0.1s linear;
+   -moz-transition: all 0.1s linear;
+    font-size: 13px;
+    margin-right: 10px;
+}
+
+.projectButton:hover {
+    border-color: #666666;
+    color: #666666;
+}
+
+.pbs {
+    display: block;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
